--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "use-long-press": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
